// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filesByDirectory generates asynchronously an array containing the file when path is a file 1`] = `
Array [
  Array [
    "fixture/level1/file1a",
  ],
]
`;

exports[`filesByDirectory generates asynchronously an array of files when given path is a directory containing only files 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory generates one array per directory when given path is a directory containing sub-directories 1`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory groups regular files by parent path 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory groups regular files by parent path 2`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory groups regular files by parent path 3`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
]
`;

exports[`filesByDirectory omits descendant directory paths 1`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory omits descendant directory paths 2`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory omits descendant file paths 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory omits descendant file paths 2`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory omits double directory paths 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory omits double file paths 1`] = `
Array [
  Array [
    "fixture/level1/file1a",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates directories first when directoriesFirst is false 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates directories first when directoriesFirst is false 2`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates directories first when directoriesFirst is false 3`] = `
Array [
  Array [
    "fixture/level1/file1a",
    "fixture/level1/file1b",
    "fixture/level1/link-to-descendant-directory",
    "fixture/level1/link-to-descendant-file",
    "fixture/level1/link-to-sibling-directory",
    "fixture/level1/link-to-sibling-file",
    "fixture/level1/link-to-unexisting-file",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates directories first when directoriesFirst is false 4`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates files first when directoriesFirst is true 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates files first when directoriesFirst is true 2`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates files first when directoriesFirst is true 3`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/file1a",
    "fixture/level1/file1b",
    "fixture/level1/link-to-descendant-directory",
    "fixture/level1/link-to-descendant-file",
    "fixture/level1/link-to-sibling-directory",
    "fixture/level1/link-to-sibling-file",
    "fixture/level1/link-to-unexisting-file",
  ],
]
`;

exports[`filesByDirectory options directoriesFirst generates files first when directoriesFirst is true 4`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks excludes symbolic links when excludeSymlinks is true 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks excludes symbolic links when excludeSymlinks is true 2`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks excludes symbolic links when excludeSymlinks is true 3`] = `
Array [
  Array [
    "fixture/level1/file1a",
    "fixture/level1/file1b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks excludes symbolic links when excludeSymlinks is true 4`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks includes symbolic links when excludeSymlinks is false 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks includes symbolic links when excludeSymlinks is false 2`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks includes symbolic links when excludeSymlinks is false 3`] = `
Array [
  Array [
    "fixture/level1/file1a",
    "fixture/level1/file1b",
    "fixture/level1/link-to-descendant-directory",
    "fixture/level1/link-to-descendant-file",
    "fixture/level1/link-to-sibling-directory",
    "fixture/level1/link-to-sibling-file",
    "fixture/level1/link-to-unexisting-file",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options excludeSymlinks includes symbolic links when excludeSymlinks is false 4`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files with their directory when showDirectories is true 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3",
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files with their directory when showDirectories is true 2`] = `
Array [
  Array [
    "fixture/level1/level2",
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3",
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files with their directory when showDirectories is true 3`] = `
Array [
  Array [
    "fixture/level1",
    "fixture/level1/file1a",
    "fixture/level1/file1b",
    "fixture/level1/link-to-descendant-directory",
    "fixture/level1/link-to-descendant-file",
    "fixture/level1/link-to-sibling-directory",
    "fixture/level1/link-to-sibling-file",
    "fixture/level1/link-to-unexisting-file",
  ],
  Array [
    "fixture/level1/level2",
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3",
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files with their directory when showDirectories is true 4`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3",
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files without their directory when showDirectories is false 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files without their directory when showDirectories is false 2`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files without their directory when showDirectories is false 3`] = `
Array [
  Array [
    "fixture/level1/file1a",
    "fixture/level1/file1b",
    "fixture/level1/link-to-descendant-directory",
    "fixture/level1/link-to-descendant-file",
    "fixture/level1/link-to-sibling-directory",
    "fixture/level1/link-to-sibling-file",
    "fixture/level1/link-to-unexisting-file",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory options showDirectories generates files without their directory when showDirectories is false 4`] = `
Array [
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;
